tests/c_headers/spi_master.nim


proc spi_device_release_bus*(dev: spi_device_handle_t) {.
    importc: "spi_device_release_bus", header: "spi_master.h".}
## *
##  @brief Calculate the working frequency that is most close to desired frequency.
##
##  @param fapb The frequency of apb clock, should be ``APB_CLK_FREQ``.
##  @param hz Desired working frequency
##  @param duty_cycle Duty cycle of the spi clock
##
##  @return Actual working frequency that most fit.
##

proc spi_get_actual_clock*(fapb: cint; hz: cint; duty_cycle: cint): cint {.
    importc: "spi_get_actual_clock", header: "spi_master.h".}
## *
##  @brief Calculate the timing settings of specified frequency and settings.
##
##  @param gpio_is_used True if using GPIO matrix, or False if iomux pins are used.
##  @param input_delay_ns Input delay from SCLK launch edge to MISO data valid.
##  @param eff_clk Effective clock frequency (in Hz) from spi_cal_clock.
##  @param dummy_o Address of dummy bits used output. Set to NULL if not needed.
##  @param cycles_remain_o Address of cycles remaining (after dummy bits are used) output.
##          - -1 If too many cycles remaining, suggest to compensate half a clock.
##          - 0 If no remaining cycles or dummy bits are not used.
##          - positive value: cycles suggest to compensate.
##
##  @note If **dummy_o* is not zero, it means dummy bits should be applied in half duplex mode, and full duplex mode may not work.
##

proc spi_get_timing*(gpio_is_used: bool; input_delay_ns: cint; eff_clk: cint;
                    dummy_o: ptr cint; cycles_remain_o: ptr cint) {.
    importc: "spi_get_timing", header: "spi_master.h".}
## *
##  @brief Get the frequency limit of current configurations.
##          SPI master working at this limit is OK, while above the limit, full duplex mode and DMA will not work,
##          and dummy bits will be aplied in the half duplex mode.
##
##  @param gpio_is_used True if using GPIO matrix, or False if native pins are used.
##  @param input_delay_ns Input delay from SCLK launch edge to MISO data valid.
##  @return Frequency limit of current configurations.
##

proc spi_get_freq_limit*(gpio_is_used: bool; input_delay_ns: cint): cint {.
    importc: "spi_get_freq_limit", header: "spi_master.h".}